# CMakeList.txt : CMake project for devtools-cpp-new, include source and define
# project specific logic here.
#
CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

# Add source to this project's executable.
ADD_EXECUTABLE (devtoolscppnew "devtools-cpp-new.cpp" "devtools-cpp-new.h")

# TODO: Add tests and install targets if needed.
